Split project into engine and game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(SFML-IMGUI-GAME
         LANGUAGES CXX)
 
 include(FetchContent)
+
 FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
     GIT_TAG 3.0.1
@@ -11,6 +12,7 @@ FetchContent_Declare(SFML
     EXCLUDE_FROM_ALL
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
+
 FetchContent_Declare(ImGui
     GIT_REPOSITORY https://github.com/ocornut/imgui
     GIT_TAG v1.91.1
@@ -19,6 +21,7 @@ FetchContent_Declare(ImGui
     SYSTEM)
 FetchContent_MakeAvailable(ImGui)
 FetchContent_GetProperties(ImGui SOURCE_DIR IMGUI_DIR)
+
 set(IMGUI_SFML_FIND_SFML OFF)
 FetchContent_Declare(ImGui-SFML
     GIT_REPOSITORY https://github.com/SFML/imgui-sfml
@@ -28,11 +31,14 @@ FetchContent_Declare(ImGui-SFML
     SYSTEM)
 FetchContent_MakeAvailable(ImGui-SFML)
 
-set(SOURCES 
-    src/main.cpp
+set(SOURCES
+    Engine/engine.cpp
+
+    TheGame/main.cpp
 )
 
 add_executable(GameBinary ${SOURCES})
 
 target_compile_features(GameBinary PRIVATE cxx_std_17)
 target_link_libraries(GameBinary PRIVATE SFML::Graphics ImGui-SFML::ImGui-SFML)
+target_include_directories(GameBinary PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Engine)
