Restructured and improved Engine, Player classes, added new Sprite class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SOURCES
     Engine/engine.cpp
     Engine/player.cpp
     Engine/resourceManager.cpp
+    Engine/sprite.cpp
 
     TheGame/main.cpp
 )
